<resources>
    <string name="app_name">SpaceXClient</string>

    <string name="label_mission">Mission</string>

    <string name="label_rocket">Rocket</string>
    <string name="rocket_value">%1$s / %2$s</string>

    <string name="label_date_time">Date/time</string>
    <string name="date_time_value">%1$s at %2$s</string>

    <string name="label_days_since_from_now">Days %1$s now</string>
    <string name="header_company">Company</string>
    <string name="header_launches">Launches</string>

    <string name="company_description">%1$s was founded by %2$s in %3$s. It has now %4$s employees, %5$s launch sites, and is valued at USD %6$s</string>
    <string name="space_x">Space X</string>

    <string name="filter_desc">Launch : most recent to oldest</string>
    <string name="filter_asc">Launch: oldest to most recent</string>

    <string name="title_sort_by">Sort by:</string>
    <string name="title_filter_by">Filter by:</string>
    <string name="image_of_the_filter_for_launches">Image of the filter for Launches</string>
    <string name="save">SAVE</string>
    <string name="filter">FILTER</string>
    <string name="filter_and_sort">Filter &amp; Sort</string>
    <string name="years">Years</string>
</resources>