<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root">

    <data></data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_close_black_24dp" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                style="@style/SpaceXSubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginBottom="@dimen/spacing_16"
                android:text="@string/title_sort_by" />


            <RadioGroup
                android:id="@+id/radiogroup_sort_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_16"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:buttonTint="@color/black"
                    android:layoutDirection="rtl"
                    android:text="@string/filter_desc"
                    android:textAlignment="textStart" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_asc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:buttonTint="@color/black"
                    android:layoutDirection="rtl"
                    android:text="@string/filter_asc"
                    android:textAlignment="textStart" />


            </RadioGroup>


            <TextView
                style="@style/SpaceXSubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginBottom="@dimen/spacing_16"
                android:text="@string/title_filter_by" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearSpinnerLayout"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_16"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/years">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/yearTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    tools:ignore="KeyboardInaccessibleWidget" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>