...

                <TextView
                    android:id="@+id/tv_date_time"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/tv_date_time_value"
                    android:text="@string/label_date_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mission" />

                <TextView
                    android:id="@+id/tv_rocket"
...
                    android:labelFor="@+id/tv_days_since_from_now_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rocket" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_launch_value"
                android:layout_width="wrap_content"

                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_8"
                app:layout_constraintStart_toEndOf="@+id/cl_launch_label"
...
